consuming data using rest-template